tests222/tests/test23.out
lli: <stdin>:1:1: error: expected top-level entity
line 25: variable a is not defined
^
